tests/misc_tests/type_eq_ui_tests/type_fn_misc_syntax_errors-err.rs
typewit::type_fn!{
    struct Unit;
}

typewit::type_fn!{
    u8 => u16;
}

fn main(){}